# src/server.js
@@ -2,8 +2,9 @@ import express from 'express'
 import fs from 'fs'
 import cors from 'cors'
 import rotasUsuarios from './routes/usuarios.js'
-import rotasMapQuest from './routes/mapquest.js'
+import rotasGeo from './routes/geo.js'
 import rotasPasseadores from './routes/passeadores.js'
+import rotasPrestadores from './routes/prestadores.js'
 
 const app = express();
 const port = process.env.PORT || 4000
@@ -32,8 +33,9 @@ app.get('/api', (req, res) => {
 //Rotas 
 app.use('/api/usuarios', rotasUsuarios)
 app.use('/api/passeadores', rotasPasseadores)
+app.use('/api/prestadores', rotasPrestadores)
 
-app.use('/api/mapquest', rotasMapQuest)
+app.use('/api/geo', rotasGeo)
 
 /* Rota do upload */
 //app.use('/upload', rotaUpload)
